OTP fatch completed 14-09-2023