@@ -1,48 +1,55 @@
 package utils;
 
+import io.appium.java_client.AppiumBy;
 import io.appium.java_client.AppiumDriver;
-import io.appium.java_client.MobileElement;
 import io.appium.java_client.android.AndroidDriver;
 import io.appium.java_client.remote.AutomationName;
 import io.appium.java_client.remote.MobileCapabilityType;
+import org.openqa.selenium.JavascriptExecutor;
+import org.openqa.selenium.WebElement;
+import org.openqa.selenium.interactions.PointerInput;
+import org.openqa.selenium.interactions.Sequence;
 import org.openqa.selenium.remote.DesiredCapabilities;
 
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStreamReader;
-import java.net.HttpURLConnection;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.*;
+import java.time.Duration;
+import java.util.Arrays;
+import java.util.HashMap;
 import java.util.Properties;
-import java.util.concurrent.TimeUnit;
+
 
 public class CommonUtils {
 
 
     DesiredCapabilities caps = new DesiredCapabilities();
     String path;
-    public AppiumDriver<MobileElement> driver;
+    public static AppiumDriver driver;
 
-    public void setup(String platformName, String deviceName, String uri) throws MalformedURLException {
+    public void setup(String platformName, String deviceName, String uri) throws MalformedURLException, URISyntaxException {
     	System.out.println("Session is creating");
 		path = System.getProperty("user.dir");
     	caps.setCapability("platformName", "Android");
 		caps.setCapability("deviceName", "Galaxy s22 FE");
-		caps.setCapability("app", "C:\\Users\\Aditya Pawar\\eclipse-workspace\\TestDemoQA\\src\\test\\app\\HP600AndMaintenanceRealeaseBuildDate.20.03.2022v2.84.2.apk");
+		caps.setCapability("app", "C:\\Users\\Aditya Pawar\\eclipse-workspace\\TestDemoQA\\src\\test\\app\\WavarApp_V_1.107_QA.apk");
         //path+"//app//HP600AndMaintenanceRealeaseBuildDate.17.10.2022v2.82.7.apk"
-		//caps.setCapability("autoGrantPermissions", "true");
+		caps.setCapability("autoGrantPermissions", "true");
+        //hide the keyboard
+        //caps.setCapability("unicodeKeyboard", true);
+      //  caps.setCapability("resetKeyboard", true);
         //caps.setCapability("fullReset", "true");
-        caps.setCapability("udid","RZ8NA1P2S8D");
+        caps.setCapability("udid","ZD2228Q6RB");
         caps.setCapability(MobileCapabilityType.AUTOMATION_NAME,AutomationName.ANDROID_UIAUTOMATOR2);
-        driver = new AndroidDriver<MobileElement>(new URL("http://127.0.0.1:4723/wd/hub"), caps);
-        driver.manage().timeouts().implicitlyWait(4,TimeUnit.SECONDS);
+        //driver = new AndroidDriver(new URL("http://127.0.0.1:4723/wd/hub"), caps);
+        driver = new AndroidDriver(new URI("http://127.0.0.1:4723/wd/hub").toURL(), caps);
+        driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
 
     }
 
     public static Properties read_properties() throws IOException {
-
-
         File file = new File("src/test/java/resources/config.properties");
         Properties prop = new Properties();
         InputStreamReader is = new InputStreamReader(new FileInputStream(file));
@@ -52,6 +59,7 @@ public class CommonUtils {
     public static void main(String... args) throws IOException {
         CommonUtils.read_properties();
     }
+
     static Process serverProcess ;
     public static void startServer() throws IOException {
         String[] command = {"cmd.exe", "/c", "start", "cmd.exe", "/k", "appium -a 127.0.0.1 -p 4723 --base-path /wd/hub --allow-cors"};
@@ -82,4 +90,13 @@ public class CommonUtils {
     }
 
 
-}
+    private PointerInput finger = new PointerInput(PointerInput.Kind.TOUCH, "finger");
+        public void tap(int x, int y) {
+            Sequence tap = new Sequence(finger, 1);
+            tap.addAction(finger.createPointerMove(Duration.ofMillis(0), PointerInput.Origin.viewport(), x, y));
+            tap.addAction(finger.createPointerDown(PointerInput.MouseButton.LEFT.asArg()));
+            tap.addAction(finger.createPointerUp(PointerInput.MouseButton.LEFT.asArg()));
+            driver.perform(Arrays.asList(tap));
+        }
+
+    }
